# e-comerce

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: README.md
ecommerce/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ecommerce/apps/: __init__.py
ecommerce/apps/FastAPI/app/: auth_utils.py  deps.py  main.py  settings.py
ecommerce/apps/FastAPI/app/routers/: auth.py  cart.py  orders.py  products.py
ecommerce/apps/FastAPI/app/schemas/: __init__.py  order.py  product.py  user.py
ecommerce/apps/FastAPI/tests/: conftest.py  test_api_error_paths.py  test_auth_additional_behaviors.py  test_auth_cart_orders_api.py  test_auth_utils.py  test_deps.py  test_products_api.py  test_products_query_and_pagination.py  test_settings.py  test_validation_contracts.py
ecommerce/apps/Streamlit/: app.py  auth_guard.py  settings.py
ecommerce/apps/Streamlit/client/: __init__.py  api_client.py
ecommerce/apps/Streamlit/pages/: 0_auth.py  1_catalogo.py  2_carrito.py  3_checkout.py  4_mis_pedidos.py
ecommerce/apps/Streamlit/tests/: test_api_client.py  test_api_client_matrix.py  test_app_entrypoint.py  test_auth_guard.py  test_streamlit_settings.py
ecommerce/docker/: docker-compose.yml  fastapi.Dockerfile  streamlit.Dockerfile
ecommerce/scripts/: seed_random_data.py
specs/: README.md  SPEC-001-catalogo-productos.md  SPEC-002-auth-carrito-checkout.md  SPEC-003-contratos-api.md  SPEC-004-generador-documentacion.md
