[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ecommerce"
version = "0.1.0"
description = "Ecommerce monorepo bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "streamlit>=1.40.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0,<1.0.0",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pre-commit>=3.8.0,<4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["apps", "packages"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=apps --cov=packages --cov-report=term-missing"
testpaths = [
  "apps/FastAPI/tests",
  "apps/Streamlit/tests",
]
