[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ecommerce"
version = "0.1.0"
description = "Ecommerce monorepo bootstrap"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "streamlit>=1.40.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "alembic>=1.14.0,<2.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "PyJWT>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.5",
  "mypy>=1.15.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pre-commit>=3.8.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["apps", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "packages"]
known-third-party = ["fastapi", "streamlit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["apps", "packages"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=apps --cov=packages --cov-report=term-missing --cov-fail-under=100"
testpaths = [
  "apps/FastAPI/tests",
  "apps/Streamlit/tests",
  "packages/core/tests",
]

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
skip_empty = true
